changed structure of classes; preparing for archival